<resources>
    <string name="app_name">Test Restaurant</string>
    <string name="contact_info_reviewActivity">معلومات الاتصال</string>
    <string name="last_name_reviewActivity">الاسم الاخير</string>
    <string name="first_name_reviewActivity">الاسم الاول</string>
    <string name="comments_reviewActivity">التعليق</string>
    <string name="review_reviewActivity">التقييم</string>
    <string name="send_reviewActivity">ارسال</string>
    <string name="phone_reviewActivity">رقم الهاتف</string>
    <string name="email_reviewActivity">البريد الالكتروني</string>
    <string name="close">اغلاق</string>
    <string name="open">فتح</string>
    <string name="choose_city">اختر المدينه</string>
    <string name="menu_home">الرئيسيه</string>
    <string name="menu_bag">الحقيبه</string>
    <string name="menu_suggestion">الاقتراحات</string>
    <string name="menu_tables">الحجوزات</string>
    <string name="menu_review">التقييم</string>
    <string name="menu_about_us">عن المطعم</string>
    <string name="restaurant_about">يعتبر مطعم  ديفان أول مطعم بالمملكة يقدم أفضل واشهر الوجبات التركية من إقليم هاتاي وبعض الوجبات العالمية الأخرى، يميز المطعم المذاق الطيب من المشويات، وبعض الأطباق الخاصة، والتوابل التركية، واللحوم الطازجة، المعدة على ايدي أمهر وأفضل الطهاة الاتراك، ولا ننسى الحلويات التركية، فهي تحفة أقليم هاتاي، ولذا تمت إضافة كافة المأكولات التي تناسب جميع الأذواق.
وأوهم ما يميز هذا المطعم هو: طريقة تقديم المأكولات إليكم، حيث يقدم بطرق فنية مصاحبة بعروض من النار.
أقلي مهاتاي: تعتبر مدينة هاتاي من المدن العريقة، حيث سكن فيها العديد من أبناء حضارات قديمة في فترات زمنية متفاوتة، يرجع تاريخ المدينة الى  40 الف عام قبل الميلاد، وكانت معقلاً لحضارات وآثار أمم كبرى مثل الأشوريون والفينيقيون والفرس والفراعنة، وفي عام 300 قبل الميلاد ، تم تأسيس إمبراطورية انطاكيا فيها ، واسمرت الى أن دخلت تحت الحكم الإسلامي ي عهد الدولة الأموية في عام 638م، واستمرت المنطقة تحت الخلافات المتوالية الى أن وقعت تحت السيطرة الفرنسية عام 1920 ، تتميز مدينة هاتاي بان 40% من سكانها هم من ذوي الأصول العربية لذلك فإن الأطعمة والعادات التي تتميز بها ترتبط بشكل كبير بالعادات والأصول العربية، وتخطر مدينة هاتي على الخاطر عند ذكر الكنافة والبهارات.
    </string>
    <string name="restaurant_name">ديفان</string>
    <string name="back_confirmastionActivity">للخلف</string>
    <string name="suggest_title_complaintsActivity">تواصل معنا اذا كان لديك اي شكاوي او مقترحات</string>
    <string name="A.K.D_complaintsActivity">المملكه العربيه السعوديه</string>
    <string name="restauramt_address_complaintActivity">شارع الستين,طريق الشفاء,الطائف</string>
    <string name="restaurant_phone_complaintsActivity">+996555007876</string>
    <string name="name_complaintActivity">الاسم</string>
    <string name="s_c_complaintActivity">الشكوي/المقترح</string>
    <string name="send_complaintActivity">ارسال</string>
    <string name="price_itemsDetailsFoodMenu">السعر:</string>
    <string name="order_orderDesc">الطلب</string>
    <string name="description_orderDesc">الوصف</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_details_OrderFragment">تفاصيل الطلب:</string>
    <string name="buy_now_orderFragment">اضافه الي الحقيبه</string>
    <string name="add_to_cart_orderFragment">اضافه الي السله</string>
    <string name="ammount_ordersFragment">الكميه</string>
    <string name="desc_fragmentDescription">الوصف</string>
    <string name="price_number_itemsDetailsFoodMenu">ر س</string>
    <string name="reserve_table_ReservationActivity">قم بارسال اسمك ورقم الهاتف وسنقوم بالتواصل معك لحجز طاولتك</string>
    <string name="offers">العروض</string>
    <string name="my_orders_menu">طلباتي</string>
    <string name="branches_menu">الفروع</string>
    <string name="logout_menu">تسجيل الخروج</string>
    <string name="login_text_signinActivity">برجاء القيام بتسجيل الدخول...</string>
    <string name="password_signinActivity">كلمة المرور</string>
    <string name="cpassword_signinActivity">تاكيدكلمة المرور</string>
    <string name="signin_signInActivity">تسجيل الدخول</string>
    <string name="registeration_registerActivity">قم بادخال بياناتك لتسجيل الحساب...</string>
    <string name="registeration_signUpActivity">تسجيل الحساب</string>
    <string name="welcome_message_regestrationActivity">مرحبا بكم في تطبيق ديفان</string>
    <string name="continue_bagActivity">استمرار</string>
    <string name="count_items_bag_details">الكميه:</string>
    <string name="remove_itemsBagDetails">حذف</string>
    <string name="address_branchesActivity">العنوان:الطائف-المملكه العربيه السعوديه</string>
    <string name="phone_number_branchesActivity">الهاتف:96627462842+</string>
    <string name="size_items_fragment_order">الحجم:</string>
    <string name="type_items_fragment_order">النوع:</string>
    <string name="price_items_fragment_order">السعر:</string>
    <string name="how_to_receive_order_deliverWay">من فضلك قم باختيار طريقة استلام الطلب</string>
    <string name="deliver_home_DeliveryWay">توصيل الي المنزل</string>
    <string name="take_from_restaurant_deliveryWay">الاستلام من المطعم</string>
    <string name="choose_location_LocationActivity">اختار المنطقه</string>
    <string name="choose_city_locationActivity">من فصلك اختار المنطقه التابع لها عنوانك:</string>
    <string name="total_orders_ckeckActivity">اجمالي عدد الطلبات</string>
    <string name="bill_checkActivity">الفاتوره</string>
    <string name="payment_checkActivity_button">الدفع</string>
    <string name="total_bill_checkActivity">اجمالي الفاتوره</string>
    <string name="please_choose_location_locationActivity">من فضلك قم باختيار موقعك:</string>
    <string name="shipping_fees_checkActivity">خدمة التوصيل</string>
    <string name="restaurant_closed">عفوا المطعم مغلق حاليا برجاء التحقق في وقت لاحق</string>
    <string name="cancel_item_my_order">الغاء</string>
    <string name="serial_number_itemMyOrders">الرقم المرجعي:</string>
    <string name="total_order_price_itemMyOrders">اجمالي الطلب:</string>
    <string name="order_date_itemMyOrders">تاريخ الطلب:</string>


</resources>