<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    android:background="@color/default_grey_color">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="263dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="375dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="428dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="488dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="556dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="318dp" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/resgiter_ilustration"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="right"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/registeration_registerActivity"
        android:textColor="@color/black_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/name_signUpActivity_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/back_border"
        android:ellipsize="end"
        android:gravity="right"
        android:hint="@string/name_complaintActivity"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline12"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginEnd="16dp" />

    <EditText
        android:id="@+id/phone_signUpActivity_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/back_border"
        android:ellipsize="end"
        android:gravity="right"
        android:hint="@string/phone_reviewActivity"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_goneMarginEnd="16dp" />

    <EditText
        android:id="@+id/password_signUpActivity_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/back_border"
        android:ellipsize="end"
        android:gravity="right"
        android:hint="@string/password_signinActivity"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline6"
        app:layout_goneMarginEnd="16dp" />

    <EditText
        android:id="@+id/cpassword_SignUpActivity_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/back_border"
        android:ellipsize="end"
        android:gravity="right"
        android:hint="@string/cpassword_signinActivity"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline7"
        app:layout_goneMarginEnd="16dp" />


    <Button
        android:id="@+id/sign_up_signUpActivity_button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="172dp"
        android:background="@drawable/off_red_color_rectangle"
        android:text="@string/registeration_signUpActivity"
        android:textColor="@color/white_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline8" />

    <ProgressBar
        android:id="@+id/sign_up_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/primary_color_progress_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>